# lane-detection

./: pipeline.py  projection.pcd  requirements.txt
line_fitting/: data.pkl  main.py
preprocessing/: CMakeLists.txt  preprocessing.cpp
segmentation/: colored_clusters.ply  colored_lines.ply  data.pkl  main.py
visualization/: main.py  result.xml
